# SirilPrep

./: CMakeLists.txt  LICENSE  READ.me
src/: DatabaseManager.cpp  DatabaseManager.h  FileRenamer.cpp  FileRenamer.h  FitsFileUtils.cpp  FitsFileUtils.h  ImageOrganizer.cpp  ImageOrganizer.h  ImageOrganizer.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SirilProcessor.cpp  SirilProcessor.h  SirilProcessor.ui  main.cpp
